--- a/fe/src/features/pronunciation/PronsFirst.css
+++ b/fe/src/features/pronunciation/PronsFirst.css
@@ -4,9 +4,9 @@
     flex-direction: column;
     align-items: center; 
     justify-content: center;
-    height: 60vh;
+    height: 70vh;
     background-color: #ffe0b1;
-    padding: 20px;
+    
 }
 
 /* 🔹 이미지 컨테이너  */
@@ -14,39 +14,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-    width: 90%;
-    max-width: 900px;
-    margin-left: -10px; /* 🔹 왼쪽으로 50px 이동 */
+    gap: 2vw;
     padding: 10px;
 }
 
-/* 🔹 이미지 크기 키우기 */
-.lip-image,
-.mouth-image {
-    width: 25vw; 
-    height: 20vw;
-    border-radius: 1.2rem;
-    /* object-fit: cover; */
-}
-
-.lips-video {
-    width: 25vw; 
-    height: 20vw;
-
-}
 
 /* 🔹 설명 컨테이너 크기 키우기 */
 .description-container {
     text-align: center;
     background-color: #e3f2fd;
-    padding: 2%;
+    padding: 3vh;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     width: 50vw;  
-    margin-bottom: 25px;
-    font-size: 1.25rem; 
-    margin-left: -10px;
+    margin-bottom: 2vh;
+    font-size: 1.1rem; 
 }
 
 .audio-wrapper {
@@ -112,7 +94,16 @@
     font-weight: bold;
 }
 
-.lip-video {
-    width: 24vw;
-    
+.lips-video {
+    width: 45vw;
+    height: 30vh;
+}
+
+/* 🔹 이미지 크기 키우기 */
+.lip-image,
+.mouth-image {
+    width: 35vw; 
+    height: 30vh;
+    border-radius: 1.2rem;
+    /* object-fit: cover; */
 }
