--- a/fe/src/features/pronunciation/PronsSecond.css
+++ b/fe/src/features/pronunciation/PronsSecond.css
@@ -19,7 +19,7 @@
   .image-section {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 0.5vh;
   }
   
   .camera-section {
@@ -41,7 +41,7 @@
     align-items: center;
     justify-content: center;
     width: 35vw;
-    height: 55vh;
+    height: 56vh;
     background-color: #eef;
     /* border: 2px #aaa; */
     border: none;
@@ -124,12 +124,13 @@
 } */
 
 .lip-video {
-    width: 23vw;
-    height: 28vh;
+    width: 24vw;
+    height: 34vh;
+    transform: translateY(-1vh) ;
 }
 
 .image-top, .image-bottom {
-    width: 23vw;
+    width: 24vw;
     height: 32vh;
     border: none;
     border-radius: 10px;
