S12P11E104-591 Feat: AI 대화 기능

--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -64,3 +64,8 @@ body {
     font-family: 'NPSextrabold';
     src: url('./assets/fonts/NPSfont_extrabold.ttf')
 }
+
+@font-face {
+    font-family: 'Pretendard';
+    src: url('./assets/fonts/PretendardVariable.ttf');
+}
