--- a/fe/src/features/pronunciation/PronsFirst.css
+++ b/fe/src/features/pronunciation/PronsFirst.css
@@ -4,9 +4,8 @@
     flex-direction: column;
     align-items: center; 
     justify-content: center;
-    height: 70vh;
+    height: 65vh;
     background-color: #ffe0b1;
-    
 }
 
 /* 🔹 이미지 컨테이너  */
@@ -14,8 +13,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 2vw;
+    gap: 10px;
     padding: 10px;
+    transform: translateY(5%);
 }
 
 
@@ -26,9 +26,12 @@
     padding: 3vh;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    width: 50vw;  
+    width: 800px;  
     margin-bottom: 2vh;
-    font-size: 1.1rem; 
+    font-size: 1.3rem; 
+    font-family: Pretendard;
+    font-weight: bold;
+    transform: translateY(8%);
 }
 
 .audio-wrapper {
@@ -53,7 +56,8 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-  }
+    transform: translateY(30%);
+}
   
   .audio-button:hover {
     background-color: #45a049;
@@ -64,18 +68,20 @@
     width: 300%;
     max-width: 300px;
     z-index: 2;
+    transform: translateY(30%);
   } 
   
 .prons-button-container{
     width: 100%;
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
 }
 
 .audio-player {
     width: 130px; /* 크기를 줄여서 버튼과 정렬 유지 */
     margin-top: 5px;
+    
 }
 
 .next-button {
@@ -95,15 +101,28 @@
 }
 
 .lips-video {
-    width: 45vw;
-    height: 30vh;
+    width: 400px;
+    height: 300px;
 }
 
 /* 🔹 이미지 크기 키우기 */
 .lip-image,
 .mouth-image {
-    width: 35vw; 
-    height: 30vh;
+    width: 400px; 
+    height: 300px;
     border-radius: 1.2rem;
     /* object-fit: cover; */
+}
+
+.pronunciation-box {
+    position: absolute;
+    top: 3%;  /* 화면 상단에 배치 */            
+    background-color: #FF9595; 
+    padding: 5px 15px;
+    border-radius: 100%;
+    font-family: 'DXChildsdrawing';
+    font-size: 70px;
+    font-weight: bold;
+    color: #ffffff;
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
