--- a/fe/src/features/pronunciation/PronsSecond.css
+++ b/fe/src/features/pronunciation/PronsSecond.css
@@ -93,7 +93,7 @@
     padding: 5px 15px;
     border-radius: 100%;
     font-family: 'DXChildsdrawing';
-    font-size: 66px;
+    font-size: 70px;
     font-weight: bold;
     color: #ffffff;
     text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
@@ -136,7 +136,7 @@
     border-radius: 10px;
   }
 
-  .feedback-box {
+  .prons-feedback-box {
     background-color: #f8f9fa;
     border: 2px solid #ccc;
     border-radius: 15px;
