S12P11E104-591 Fix: 주석 제거

--- a/fe/src/features/pronunciation/PronsResult.css
+++ b/fe/src/features/pronunciation/PronsResult.css
@@ -150,8 +150,8 @@
 
 /* ✅ 학습 결과 스타일 */
 .current-session-result {
-    flex: 1.1; 
-    max-width: 40vw;
+    /* flex: 1.1;  */
+    max-width: 45vw;
     transform: translateY(10%);
 }
 
